fix: ajusta os links, icones e titulo do site

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hero - Fernanda Mentora Animal</title>
+    <title>Fernanda Zandonadi - Mentora Animal</title>
     <meta
       name="description"
       content="Mentoria animal com Fernanda — conexão, bem-estar e linguagem animal."
@@ -17,6 +17,11 @@
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
     ></script>
+     <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/bold/style.css"
+    />
     <link rel="stylesheet" href="./style.css">
   </head>
 
@@ -56,18 +61,18 @@
               class="flex flex-wrap justify-center sm:justify-start gap-4 pt-6"
             >
               <a
-                href="https://www.instagram.com/"
+                href="https://www.instagram.com/fernandazandonadi_/"
                 target="_blank"
                 class="flex items-center gap-2 bg-white text-green-800 border border-white/20 hover:bg-green-800 hover:text-white transition-all px-6 py-2.5 rounded-full shadow-md text-sm sm:text-base font-semibold"
               >
-                <i class="fab fa-instagram"></i> Instagram
+                <i class="ph-bold ph-instagram-logo"></i>Instagram
               </a>
               <a
-                href="https://wa.me/seunumerowhatsapp"
+                href="https://wa.me/554891635379"
                 target="_blank"
                 class="flex items-center gap-2 bg-white text-green-800 border border-white/20 hover:bg-green-800 hover:text-white transition-all px-6 py-2.5 rounded-full shadow-md text-sm sm:text-base font-semibold"
               >
-                <i class="fab fa-whatsapp"></i> WhatsApp
+                <i class="ph-bold ph-whatsapp-logo"></i> WhatsApp
               </a>
             </div>
           </div>
@@ -226,7 +231,7 @@
     </section>
 
     <!-- SECTION: CURSOS -->
-    <section class="relative bg-white py-20 px-4 md:px-12 overflow-hidden">
+    <section id="cursos" class="relative bg-white py-20 px-4 md:px-12 overflow-hidden">
       <!-- Fundo degradê e luzes -->
       <div class="absolute inset-0 bg-gradient-to-r from-white via-gray-50 to-white opacity-50 pointer-events-none"></div>
       <div class="absolute -top-16 left-1/2 w-72 h-72 bg-indigo-100 rounded-full opacity-20 blur-3xl pointer-events-none transform -translate-x-1/2"></div>
